Fix in outer join
The underlying database does not support FULL OUTER JOIN. Even though the attributes have names, they must also follow a specific order to combine the two outer joins. Ugh.